--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Teste de CRUD",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"vai testar o que ô cabeça?\"",
+    "test": "echo \"that no have a test\"",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
